[package]
name = "newsapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newsapi = { path = "./newsapi" }
dotenv = "0.15.0"
termimad = "0.23.2"
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["full"] }
