[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.7.1", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
url = "2.4.0"
# reqwest = { version = "0.11.18", features = ["json"], optional = true }
reqwest = { version = "0.11.18", features = ["json"] }

# [features]
# async = ["reqwest"]
